syntax="proto3";

package users;

service UserService {
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {}
    rpc GetUserProfileById(GetUserProfileByIdRequest) returns (GetUserProfileByIdResponse) {}
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
    rpc UpdateUserStatus(UpdateUserStatusRequest) returns (UpdateUserStatusResponse) {}
    rpc GetUserScores(GetUserScoresRequest) returns (GetUserScoresResponse) {}
    rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {}
}

message User {
    string id = 1;
    string name = 2;
    string lastname = 3;
    string email = 4;
    string role = 5;
    string username = 6;
    string profilePicture = 7;
    string createdAt = 8;
    string updatedAt = 9;
    int32 status = 10;
}

message Metadata {
    int32 page = 1;
    int32 limit = 2;
    int32 totalPage = 3;
}

message Score {
    string id = 1;
    string userId = 2;
    string game = 3;
    int32 score = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message GetAllUsersRequest {
    int32 page = 1;
    int32 limit = 2;
}

message GetAllUsersResponse {
    repeated User users = 1;
    Metadata metadata = 2;
}

message GetUserProfileByIdRequest {
    string id = 1;
}

message GetUserProfileByIdResponse {
    User user = 1;
}

message UpdateProfileRequest {
    string id = 1;
    string name = 2;
    string lastname = 3;
    string profilePicture = 6;
}

message UpdateProfileResponse {
    User user = 1;
}

message UpdateUserStatusRequest {
    string id = 1;
    int32 status = 2;
}

message UpdateUserStatusResponse {
    User user = 1;
}

message GetUserScoresRequest {
    string id = 1;
    int32 page = 3;
    int32 limit = 2;
}

message GetUserScoresResponse {
    repeated Score scores = 1;
}

message RemoveUserRequest {
    string id = 1;
}

message RemoveUserResponse {}




message Empty {}